Написана логика ходов и отображения результата

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
           <p id="countMove">Здесь будет результат</p>
         </div>
         <div class="cubes">
-          <div class="firstCube">Cube 1</div>
-          <div class="secondCube">Cube 2</div>
+          <div class="firstCube"></div>
+          <div class="secondCube"></div>
+        </div>
+        <div class="cubes">
+          <div class="firstCubeBot"></div>
+          <div class="secondCubeBot"></div>
         </div>
         <div class="btn">
           <button onclick="start()">Бросок</button>
@@ -39,7 +43,9 @@
         </div>
       </div>
     </div>
-
+    <dialog>
+      <p></p>
+    </dialog>
     <script src="script.js"></script>
   </body>
 </html>
