Добавлена modal и отображение/скрытие

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
       </div>
     </div>
-    <dialog>
-      <p></p>
+    <dialog aria-label="Победитель" aria-labelledby="winner" id="showWinner">
+      <p id="winner">Я работаю!</p>
     </dialog>
     <script src="script.js"></script>
   </body>
