исправление пути img для корректного отображения на githubPages

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="player">
         <h2>Игрок</h2>
         <div class="heartsPlayer">
-          <img class="hearts" src="/src/heart.svg" />
-          <img class="hearts" src="/src/heart.svg" />
-          <img class="hearts" src="/src/heart.svg" />
+          <img class="hearts" src="./src/heart.svg" />
+          <img class="hearts" src="./src/heart.svg" />
+          <img class="hearts" src="./src/heart.svg" />
         </div>
       </div>
       <div class="btnAndCube">
@@ -37,9 +37,9 @@
       <div class="computer">
         <h2>Бот</h2>
         <div class="heartsBot">
-          <img class="hearts" src="/src/heart.svg" />
-          <img class="hearts" src="/src/heart.svg" />
-          <img class="hearts" src="/src/heart.svg" />
+          <img class="hearts" src="./src/heart.svg" />
+          <img class="hearts" src="./src/heart.svg" />
+          <img class="hearts" src="./src/heart.svg" />
         </div>
       </div>
     </div>
