--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="board">
       <div class="player">
-        <h2>Игрок 1</h2>
+        <h2 id="player1">Игрок 1</h2>
         <div class="heartsPlayer">
           <img class="hearts" src="./src/heart.svg" />
           <img class="hearts" src="./src/heart.svg" />
@@ -20,24 +20,28 @@
       <div class="btnAndCube">
         <div class="result">
           <h1 id="move">Ваш ход</h1>
+          <p id="countMove"></p>
           <p id="roundWinner"></p>
-          <p id="countMove">Результат хода</p>
         </div>
-        <div class="cubes">
-          <div class="firstCube"></div>
-          <div class="secondCube"></div>
+        <div>
+          <div class="cubes">
+            <div class="firstCube"></div>
+            <div class="secondCube"></div>
+          </div>
+          <div class="line"></div>
+          <div class="cubes">
+            <div class="firstCubeBot"></div>
+            <div class="secondCubeBot"></div>
+          </div>
         </div>
-        <div class="cubes">
-          <div class="firstCubeBot"></div>
-          <div class="secondCubeBot"></div>
-        </div>
+
         <div class="btn">
           <button id="startBot">Бросок</button>
           <button id="startPlayer">Бросок</button>
         </div>
       </div>
       <div class="computer">
-        <h2>Игрок 2</h2>
+        <h2 id="player2">Игрок 2</h2>
         <div class="heartsBot">
           <img class="hearts" src="./src/heart.svg" />
           <img class="hearts" src="./src/heart.svg" />
@@ -52,15 +56,20 @@
       open
     >
       <div class="modalContent">
-        <p id="winner">С кем будешь Играть?</p>
+        <p>С кем будешь Играть?</p>
         <button type="button" id="choiceBot">С ботом</button>
         <button type="button" id="choicePlayer">С человеком</button>
       </div>
     </dialog>
     <dialog aria-label="Конец Игры" id="showEndGame">
-      <h2>Сыграем еще?</h2>
-      <button type="button" id="yes">Да</button>
-      <button type="button" id="no">Нет</button>
+      <div class="showEndGameContent">
+        <h2 id="winner"></h2>
+        <p>Сыграем еще?</p>
+        <div class="showEndGameBtn">
+          <button type="button" id="yes">Да</button>
+          <button type="button" id="no">Нет</button>
+        </div>
+      </div>
     </dialog>
     <script src="script.js"></script>
   </body>
