--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
@@ -25,13 +25,13 @@
         </div>
         <div>
           <div class="cubes">
-            <div class="firstCube"></div>
-            <div class="secondCube"></div>
+            <div class="firstCube dice"></div>
+            <div class="secondCube dice"></div>
           </div>
           <div class="line"></div>
           <div class="cubes">
-            <div class="firstCubeBot"></div>
-            <div class="secondCubeBot"></div>
+            <div class="firstCubeBot dice"></div>
+            <div class="secondCubeBot dice"></div>
           </div>
         </div>
 
@@ -56,7 +56,7 @@
       open
     >
       <div class="modalContent">
-        <p>С кем будешь Играть?</p>
+        <h2>С кем будешь Играть?</h2>
         <button type="button" id="choiceBot">С ботом</button>
         <button type="button" id="choicePlayer">С человеком</button>
       </div>
