Переписана логика, скорректированы CSS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <div class="btnAndCube">
         <div class="result">
           <h1 id="move">Ваш ход</h1>
-          <p id="countMove"></p>
           <p id="roundWinner"></p>
         </div>
         <div>
@@ -39,6 +38,7 @@
           <button id="startBot">Бросок</button>
           <button id="startPlayer">Бросок</button>
         </div>
+        <div class="hronicle"></div>
       </div>
       <div class="computer">
         <h2 id="player2">Игрок 2</h2>
